--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <start-class>com.mtroajahn.boot.Application</start-class>
+        <start-class>com.lory.boot.Application</start-class>
     </properties>
 
     <parent>
